--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
-site_name: simplepeng
+site_name: KeepLearning
 theme:
   name: readthedocs
-repo_url: https://github.com/simplepeng
+repo_url: https://github.com/simplepeng/KeepLearning/
 
