--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -12,6 +12,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      with:
+          fetch-depth: 0
 
       - uses: actions/setup-python@v3.1.2
       - run: pip install --upgrade pip && pip install mkdocs mkdocs-gen-files
